--- a/letter/letter.html
+++ b/letter/letter.html
@@ -93,7 +93,7 @@
     <script>
         $(function () {
             $(".sentence1").typed({
-                strings: ["123 sdff;"],
+                strings: ["123  udf;sug;"],
                 typeSpeed: 300,
                 backSpeed: 100,
                 cursorChar: "|",
