--- a/index.html
+++ b/index.html
@@ -436,29 +436,28 @@
       </div>
     </div>
   </section>
-  <!-- Tumhe khud bhi nahi pata tum kya ho mere liye -->
+  
   <!-- WOOF WOOOFFF/Special -->
   <section class="container-fluid" style="background-color: #F08A5D;">
     <div class="container">
       <h2>Special</h2>
-      <!-- <p>Mera Ye Gift Dekh Kar Mujhe Return Gift Me Ek Smile De Dena. Tumse Zayada Mujhe intezaar rehta hai tumhare
-        Birthday Ka Hazaro Lakkho Din tumahre zindgi me aur judte jaaye.<br>
-        Ye Din Mujhe mere har din se khass lagta hai, Tumhara Birthday Na Mujhe Sach Me Ek Tewhaar lagta hai
-      </p> -->
-      <p>
-        Kitni tameez se mile the na hum shuruaat me.
-        Tab Laga Nahi Tha Hum Aise Dost Ban Jayenge Baad Me.
-        Ye "Aap" se "tu" tak ka safar kitni jaldi Tay hogya na,
-        Hum ek dusre ko Itna janne lage hume pata hi nahi chala na.
-        Hamari kuch chize aisi jo koi aur samjh hi nahi sakta,
-        Log to aage bhi mil jayenge par tere jaisa dost koi mil hi nahi sakta.
-        Shuruaat apni bilkul formal thi
-        Ab Hamare bich person bhi kuch nahi
-        Q ke Ek insaan aisa hota hai na jisse saari dastan pata hoti hai
-        Aur wo insaan mila tujhe me hi
-        Hum dost kaise bane the yaad hai?
-        Apne aap hi sab chalta gaya aur piche mudh kar phir dekha hi nahi
-      </p>
+      <p>Me khudko boht Lucky Samjhta hu Ki Tere jaisa Yaar Mila,
+        Rishta Hamara Tom and Jerry se milta julta hi hai,
+        Aise log milte kaha hai jo bina matlab Saath Rahe,
+        Meri bakwaas suna,
+        phir us bakwas ko samjhna,
+        Tere alawa kisi ke bas me nahi ,
+        tu best hai yaar ,
+        Aur tujhe ye baat abhi pata hi nahi hai,
+        Dikhati nahi hai par mujhse zayada parwa karti hai meri,
+        Mujhe hasana kaise hai tujhe acche se aata hai,
+        Meri pareshani ko bhi sirf tu hi samjh pati hai,
+        Aankh band karke bhi jispe bharosa kar sakte hai na
+        Tu unhi logo me aati hai ,
+        ha janta hu thoda chizi hogya lekin chalta hai, 
+        Thoda special feel karne ka tumhara bhi to huq banta hai,
+        Har kisi ki zindgi me na tujh sa koi hona chahiye,
+        Tu Best hai yaar tujhe pata hona chahiye,,,</p>
       <div class="photo-section">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -522,10 +521,11 @@
   <section id="bg-image3" class="container-fluid">
     <div class="light-overlay">
       <div class="container">
-        <h2>We</h2>
+        <h2>We-Crime-Partners</h2>
         <p>
           Being in love doesn’t make me happy. It’s being in love with you, year after year, that does the trick.
-          I haven't seen a friend like You. We Met as Stranger and Become Best-Friends. Then Crime-Partners
+          I haven't seen a friend like You. We Met as Stranger and Become Best-Friends & Crime-Partners. Our Special Bond / Our Specail Memories
+           
           <span><i class="em em-heartpulse"></i></span>
         </p>
         <div class="photo-section">
