--- a/letter/letter.html
+++ b/letter/letter.html
@@ -20,14 +20,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/typed.js"></script>
     <script src='http://css-tricks.com/examples/BlurredText/js/jquery.lettering.js'></script>
-
-
-
-
-
-
-
-
 </head>
 
 <body>
@@ -36,10 +28,9 @@
         <div class="paper">
             <div class="lines">
                 <div class="text" spellcheck="false">
-                    Dear Best Friend,<br /> This is ....<br /><br />
+                    Dear Best Friend,<br /> This is For You.......<br />Hai Meri Ek Dost<br /><br />
                     <span class='sentence sentence1'></span>
                     <br />
-
                 </div>
             </div>
             <div class="holes hole-top"></div>
@@ -93,8 +84,26 @@
     <script>
         $(function () {
             $(".sentence1").typed({
-                strings: ["upload"],
-                typeSpeed: 300,
+                strings: [`
+                Kitni tameez se mile the na hum shuruaat me.
+        Tab Laga Nahi Tha Hum Aise Dost Ban Jayenge Baad Me.
+        Ye "Aap" se "tu" tak ka safar kitni jaldi Tay hogya na,
+        Hum ek dusre ko Itna janne lage hume pata hi nahi chala na.
+        Hamari kuch chize aisi jo koi aur samjh hi nahi sakta,
+        Log to aage bhi mil jayenge par tere jaisa dost koi mil hi nahi sakta.
+        Shuruaat apni bilkul formal thi
+        Ab Hamare bich person bhi kuch nahi
+        Q ke Ek insaan aisa hota hai na jisse saari dastan pata hoti hai
+        Aur wo insaan mila tujhe me hi
+        Hum dost kaise bane the yaad hai?
+        Apne aap hi sab chalta gaya aur piche mudh kar phir dekha hi nahi.... 
+        
+        Mera Ye Gift Dekh Kar Mujhe Return Gift Me Ek Smile De Dena. 
+        Tumse Zayada Mujhe intezaar rehta hai tumhare Birthday Ka,
+        Ye Din Mujhe mere har din se khass lagta hai, 
+        Tumhara Birthday Na Mujhe Sach Me Ek Tewhaar lagta hai
+`],
+                typeSpeed: 100,
                 backSpeed: 100,
                 cursorChar: "|",
             });
