--- a/index.html
+++ b/index.html
@@ -524,7 +524,9 @@
         <h2>We-Crime-Partners</h2>
         <p>
           Being in love doesn’t make me happy. It’s being in love with you, year after year, that does the trick.
-          I haven't seen a friend like You. We Met as Stranger and Become Best-Friends & Crime-Partners. Our Special Bond / Our Specail Memories
+          I haven't seen a friend like You. We Met as Stranger and Become Best-Friends & Crime-Partners. 
+          Apna Special Bond , Countless Memories, Apni Mastiya , College Ke Baad  Phir se Milna , Khane Jane ,  phone calls pe ghanto baate karna Jaise Sono Aur Titu Hai Na Ek Dusre ke liye apni Dosti Utni Hi pyaari Hai, Sabse alag, Seriously Me kuch kuch bhi likh raha hu par sab Sahi hai...<br>
+          i miss you a lot more and more          
            
           <span><i class="em em-heartpulse"></i></span>
         </p>
@@ -602,7 +604,7 @@
     </div>
     </div>
   </section>
-  <div class="d-flex justify-content-center align-items-center">
+  <div class="d-flex justify-content-center align-items-center mt-5">
     <a class="btn btn-primary px-5" href="./letter/letter.html" role="button">Next</a>
   </div>
 
