--- a/letter/letter.html
+++ b/letter/letter.html
@@ -28,7 +28,7 @@
         <div class="paper">
             <div class="lines">
                 <div class="text" spellcheck="false">
-                    Dear Best Friend,<br /> This is For You.......<br />Hai Meri Ek Dost<br /><br />
+                    Dear Best Friend,<br /> This is For You Ulllluuuuuuu<br /><br /> . . . .   . . .  . . . . . . . .<br />
                     <span class='sentence sentence1'></span>
                     <br />
                 </div>
@@ -101,7 +101,7 @@
         Mera Ye Gift Dekh Kar Mujhe Return Gift Me Ek Smile De Dena. 
         Tumse Zayada Mujhe intezaar rehta hai tumhare Birthday Ka,
         Ye Din Mujhe mere har din se khass lagta hai, 
-        Tumhara Birthday Na Mujhe Sach Me Ek Tewhaar lagta hai
+        Tumhara Birthday Na Mujhe Sach Me Ek Tewhaar lagta hai........ Once Again HAPPY BIRTHDAY 
 `],
                 typeSpeed: 100,
                 backSpeed: 100,
