--- a/index.html
+++ b/index.html
@@ -112,14 +112,15 @@
     <div class="light-overlay">
       <div class="container">
         <h2 style="color: #000; text-decoration: underline overline #f4f4f4;">Happy Birthday Mere Yaar</h2>
-        <p>twinkle twinkle little star kab se kar raha tha is pal ka intezaar. happy birthday mere yaar.is baar tumahare
-          birthday par tuhare saath nahi hu
-          ha beshak dur hu tumse har dil se tumhare pass hu
-          tumse haath mila ke tumhe wish nahi kar sakta
-          Bas messeges se hi kaam chalana padega
-          tumhe apne haatho se cake nahi khila sakta
-          chahta to hu boht kuch karna par kya karu kuch kar nahi sakta.
-          Khair chodho itne khass din ko me U hi nahi jane de sakta hu
+        <p>twinkle twinkle little star kab se kar raha tha is pal ka intezaar. 
+          happy birthday mere yaar. 
+          is baar tumahare birthday par tumhare saath nahi hu, 
+          ha beshak dur hu tumse par dil se tumhare pass hu, 
+          tumse haath mila ke tumhe wish nahi kar sakta, 
+          Bas messeges se hi kaam chalana padega, 
+          tumhe apne haatho se cake nahi khila sakta, 
+          chahta to hu boht kuch karna par kya karu kuch kar nahi sakta. 
+          Khair chodho itne khass din ko me U hi nahi jane de sakta hu,
           dur hu to kya hua tumhare liye pyaara sa birthday post to likhhi sakta hu
           <span><i class="em-svg em-heart"></i></span>
           <br>
@@ -525,8 +526,9 @@
         <p>
           Being in love doesn’t make me happy. It’s being in love with you, year after year, that does the trick.
           I haven't seen a friend like You. We Met as Stranger and Become Best-Friends & Crime-Partners. 
-          Apna Special Bond , Countless Memories, Apni Mastiya , College Ke Baad  Phir se Milna , Khane Jane ,  phone calls pe ghanto baate karna Jaise Sono Aur Titu Hai Na Ek Dusre ke liye apni Dosti Utni Hi pyaari Hai, Sabse alag, Seriously Me kuch kuch bhi likh raha hu par sab Sahi hai...<br>
-          i miss you a lot more and more          
+          Apna Special Bond , Countless Memories, Apni Mastiya , College Ke Baad  Phir se Milna , Khane Jane ,  phone calls pe ghanto baate karna Jaise Sono Aur Titu Hai Na Ek Dusre ke liye apni Dosti Utni Hi pyaari Hai, Sabse alag,<br>
+          What i Miss? Sitting With You And Spend My time with our silly but super Funny Talks.
+          i miss our laughter , Our Jokes, Our Leg-Pulling and our high fives. it's been So long since We sat And Had a good Talk. Par Koi Nahi hum Pass Nahi to Kya Hua saath to hai na kaafi hai......         
            
           <span><i class="em em-heartpulse"></i></span>
         </p>
