--- a/letter/letter.html
+++ b/letter/letter.html
@@ -131,7 +131,12 @@
             });
         };
     </script>
-
+    
+        <div class="d-flex flex-reverse justify-content-end align-items-end mt-5 Relative">
+            <a class="btn btn-primary px-5 mt-5" href="../ig.html" role="button">Next</a>
+          </div>
+   
+   
 </body>
 
 </html>
