--- a/ig.html
+++ b/ig.html
@@ -34,7 +34,11 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   </head>
   <body>
+      <div class="Head navbar d-flex justify-content-center">
+          <h1 class="text-white text-center ">For Our FriendShip</h1>
+      </div>
     <div class="mt-5">
+
       <div class="d-flex justify-content-start">
         <div class="row row-cols-1 row-cols-md-2 g-4 mt-3">
           <div class="col">
